--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19490,5 +19490,23 @@
         <target>Erforschung einer beengten Ruine in erstickender Atmosphäre</target>
       </segment>
     </unit>
+    <unit id="wGYcGMz" name="Diskussionen rund um Bauprojekte">
+      <notes>
+        <note category="german">Diskussionen rund um Bauprojekte</note>
+      </notes>
+      <segment>
+        <source>Diskussionen rund um Bauprojekte</source>
+        <target>Discussions autour des chantiers</target>
+      </segment>
+    </unit>
+    <unit id="VVIGSg2" name="Vorhandene Bauprojekte">
+      <notes>
+        <note category="german">Vorhandene Bauprojekte</note>
+      </notes>
+      <segment>
+        <source>Vorhandene Bauprojekte</source>
+        <target>Chantiers disponibles</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
