EN Translation for e-ruin tab name (2nd fix)

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19458,7 +19458,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Erforschung einer beengten Ruine in erstickender Atmosphäre</source>
-        <target>Exploring a cramped ruin in a suffocating environment</target>
+        <target>Exploring the maze of a ruin, in a cramped and suffocating environment</target>
       </segment>
     </unit>
   </file>
