--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19508,5 +19508,23 @@
         <target>Chantiers disponibles</target>
       </segment>
     </unit>
+    <unit id="Ms44ehb">
+      <notes>
+        <note category="german">Die Atmosphäre wird unerträglich... Du kannst so nicht weitermachen; ohne zu wissen wie, du findest den Ausgang, aber du verletzt dich bei der Flucht.</note>
+      </notes>
+      <segment>
+        <source>Die Atmosphäre wird unerträglich... Du kannst so nicht weitermachen; ohne zu wissen wie, du findest den Ausgang, aber du verletzt dich bei der Flucht.</source>
+        <target>L'air devient irrespirable... Vous ne pouvez plus continuer, sans savoir comment, vous retrouvez la sortie, mais vous vous êtes blessé en vous échappant.</target>
+      </segment>
+    </unit>
+    <unit id="mwmHgUh" name="Superheld">
+      <notes>
+        <note category="german">Superheld</note>
+      </notes>
+      <segment>
+        <source>Superheld</source>
+        <target>Super-héros</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
