--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19497,5 +19497,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Super Hero</target>
       </segment>
     </unit>
+    <unit id="i7ayglv">
+      <notes>
+        <note category="german">Die Schätzung des heutigen Tages muss zuerst abgeschlossen werden, um die Schätzung des nächsten Tages zu berechnen.</note>
+      </notes>
+      <segment>
+        <source>Die Schätzung des heutigen Tages muss zuerst abgeschlossen werden, um die Schätzung des nächsten Tages zu berechnen.</source>
+        <target>Die Schätzung des heutigen Tages muss zuerst abgeschlossen werden, um die Schätzung des nächsten Tages zu berechnen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
