--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19524,5 +19524,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[<strong>Achtung!</strong> Das Betreten der Stadt erfordert <div class="ap">1</div> (die Kosten sind auf den Bau des <strong>Labyrinths</strong> zurückzuführen)!]]></target>
       </segment>
     </unit>
+    <unit id="_mE4ihs" name="Unser %building% hat reichhaltigen Ertrag gebracht: %items%">
+      <notes>
+        <note category="german">Unser %building% hat reichhaltigen Ertrag gebracht: %items%</note>
+      </notes>
+      <segment>
+        <source>Unser %building% hat reichhaltigen Ertrag gebracht: %items%</source>
+        <target>Several vegetables have sprouted in the  %building%: %items%</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
