--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19553,5 +19553,14 @@
         <target><![CDATA[<strong>Attention !</strong> Entrer en ville nécessite <div class="ap">1</div> (ce coût est dû au chantier <strong>Labyrinthe</strong>) !]]></target>
       </segment>
     </unit>
+    <unit id="_mE4ihs" name="Unser %building% hat reichhaltigen Ertrag gebracht: %items%">
+      <notes>
+        <note category="german">Unser %building% hat reichhaltigen Ertrag gebracht: %items%</note>
+      </notes>
+      <segment>
+        <source>Unser %building% hat reichhaltigen Ertrag gebracht: %items%</source>
+        <target>Plusieurs légumes ont poussé dans le %building%: %items%</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
