--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19533,5 +19533,23 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Several vegetables have sprouted in the  %building%: %items%</target>
       </segment>
     </unit>
+    <unit id="3NHVIj9" name="Name">
+      <notes>
+        <note category="german">Name</note>
+      </notes>
+      <segment>
+        <source>Name</source>
+        <target>Name</target>
+      </segment>
+    </unit>
+    <unit id="qN3u6fP" name="Kosten">
+      <notes>
+        <note category="german">Kosten</note>
+      </notes>
+      <segment>
+        <source>Kosten</source>
+        <target>Kosten</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
