EN Translation for successful animal kill

--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8180,7 +8180,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>&lt;t-consumed&gt;Du hetzt das/den/die {item} auf einen Zombie. Der Untote greift sich deinen tierischen Begleiter, zerquetscht es mit seinen Griffen und würgt es ganz langsam herunter... Dumm gelaufen.. aber wenigstens hast ihn damit eine Zeit lang beschäftigt...&lt;/t-consumed&gt;&lt;nt-consumed&gt;Dein Tier &lt;strong&gt;geht einem Zombie sofort an die Gurgel&lt;/strong&gt; und reißt sich ein paar schöne Happen! Bravo!&lt;/nt-consumed&gt;</source>
-        <target><![CDATA[<t-consumed>You send your {item} over to the zombie. The wretched individual isn't the quickest of cats, but he pounces (slowly) on the animal to devour it, groaning all the time... Goodbye brave friend. On the plus side, that's one less zombie to worry about now he's distracted...</t-consumed><nt-consumed>Dein Tier <strong>geht einem Zombie sofort an die Gurgel</strong> und reißt sich ein paar schöne Happen! Bravo!</nt-consumed>]]></target>
+        <target><![CDATA[<t-consumed>You send your {item} over to the zombie. The wretched individual isn't the quickest of cats, but he pounces (slowly) on the animal to devour it, groaning all the time... Goodbye brave friend. On the plus side, that's one less zombie to worry about now he's distracted...</t-consumed><nt-consumed>Your animal <strong>leapt at the zombie's throat</strong>, and managed to turn itself into a zombie-cork! Well done!</nt-consumed>]]></target>
       </segment>
     </unit>
     <unit id="BnW7_fH">
