FR Typo fix for an item description

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -5875,7 +5875,7 @@
       </notes>
       <segment>
         <source>Ein elektronisches Bauteil aus alter Zeit. Du hast nicht viel Ahnung von dem Zeug, aber es scheint noch zu funktionieren.</source>
-        <target>Un composant électronique d'une époque révolue, dans l'état on peut s'en servir de juda, même si on ne voit pas à travers.</target>
+        <target>Un composant électronique d'une époque révolue, dans l'état on peut s'en servir de judas, même si on ne voit pas à travers.</target>
       </segment>
     </unit>
     <unit id="pP0JDNU">
