--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3337,7 +3337,7 @@
       </notes>
       <segment>
         <source>Anzahl der Tage</source>
-        <target>Anzahl der Tage</target>
+        <target>Number of days to skip</target>
       </segment>
     </unit>
     <unit id="VkIwwfC" name="Vorspulen">
@@ -3346,7 +3346,7 @@
       </notes>
       <segment>
         <source>Vorspulen</source>
-        <target>Vorspulen</target>
+        <target>Fast Forward</target>
       </segment>
     </unit>
     <unit id="omuvjZI" name="Herauswerfen (ohne Verletzung)">
@@ -3355,7 +3355,7 @@
       </notes>
       <segment>
         <source>Herauswerfen (ohne Verletzung)</source>
-        <target>Herauswerfen (ohne Verletzung)</target>
+        <target>Eject (without injury)</target>
       </segment>
     </unit>
     <unit id="uo.zViv" name="Herauswerfen (mit Verletzung)">
@@ -3364,7 +3364,7 @@
       </notes>
       <segment>
         <source>Herauswerfen (mit Verletzung)</source>
-        <target>Herauswerfen (mit Verletzung)</target>
+        <target>Eject (with injury)</target>
       </segment>
     </unit>
     <unit id="g2hjSxs" name="Timer erhöhen (1min)">
@@ -3373,7 +3373,7 @@
       </notes>
       <segment>
         <source>Timer erhöhen (1min)</source>
-        <target>Timer erhöhen (1min)</target>
+        <target>Add remaining time (1min)</target>
       </segment>
     </unit>
     <unit id="Aybos0Z" name="Timer erhöhen (24h)">
@@ -3382,7 +3382,7 @@
       </notes>
       <segment>
         <source>Timer erhöhen (24h)</source>
-        <target>Timer erhöhen (24h)</target>
+        <target>Add remaining time (24h)</target>
       </segment>
     </unit>
     <unit id=".5H3ako" name="Löschen (ermöglicht erneutes Betreten der Ruine)">
@@ -3391,7 +3391,7 @@
       </notes>
       <segment>
         <source>Löschen (ermöglicht erneutes Betreten der Ruine)</source>
-        <target>Löschen (ermöglicht erneutes Betreten der Ruine)</target>
+        <target>Delete (allows re-entering the ruins)</target>
       </segment>
     </unit>
   </file>
