--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19545,5 +19545,14 @@
         <target>Coste</target>
       </segment>
     </unit>
+    <unit id="6spO8K_" name="Dieser Bürger hat sich für heute Nacht hier versteckt.">
+      <notes>
+        <note category="german">Dieser Bürger hat sich für heute Nacht hier versteckt.</note>
+      </notes>
+      <segment>
+        <source>Dieser Bürger hat sich für heute Nacht hier versteckt.</source>
+        <target>Dieser Bürger hat sich für heute Nacht hier versteckt.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
