--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19560,5 +19560,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Dieser Bürger hat sich für heute Nacht hier versteckt.</target>
       </segment>
     </unit>
+    <unit id="PEGlllX">
+      <notes>
+        <note category="german">Du bist gerade dabei in dieser Zone zu graben. Wenn du bis zum Ende der angezeigten Zeit am gleichen Platz bleibst, &lt;strong&gt;hast du die Möglichkeit einen weiteren Gegenstand zu finden&lt;/strong&gt;!&lt;br /&gt;&lt;br /&gt;Du kannst so lange bleiben wie du möchtest.</note>
+      </notes>
+      <segment>
+        <source>Du bist gerade dabei in dieser Zone zu graben. Wenn du bis zum Ende der angezeigten Zeit am gleichen Platz bleibst, &lt;strong&gt;hast du die Möglichkeit einen weiteren Gegenstand zu finden&lt;/strong&gt;!&lt;br /&gt;&lt;br /&gt;Du kannst so lange bleiben wie du möchtest.</source>
+        <target><![CDATA[You are currently searching the zone. If you stay here until the timer runs out, <strong>you may find another object</strong>!<br /><br />You can stay there for as long as you wish.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
